--- a/uxp-frontend/Dockerfile
+++ b/uxp-frontend/Dockerfile
@@ -7,21 +7,27 @@ RUN mkdir /tmp/ui
 RUN dpkg-deb -X /uxp-securityserver-ui_1.4.6_all.deb /tmp/ui
 RUN chmod 644 -R /tmp/ui
 
-COPY uxp-securityserver-rest-api_1.22.7_all.deb /uxp-securityserver-rest-api_1.22.7_all.deb
-RUN mkdir /tmp/rest-api
-RUN dpkg-deb -X /uxp-securityserver-rest-api_1.22.7_all.deb /tmp/rest-api
-RUN chmod 644 -R /tmp/rest-api
+COPY uxp-identity-provider-ui_1.4.6_all.deb /uxp-identity-provider-ui_1.4.6_all.deb
+RUN mkdir /tmp/identity-ui
+RUN dpkg-deb -X /uxp-identity-provider-ui_1.4.6_all.deb /tmp/identity-ui
+RUN chmod 644 -R /tmp/identity-ui
+
+
+#ENTRYPOINT ["top", "-b"]
 
 FROM ubuntu:22.04
-RUN apt update && apt install -qq --no-install-recommends -y nginx && rm -rf /var/lib/apt/lists/* && apt clean
+RUN apt update &&  \
+    apt install -qq --no-install-recommends -y nginx && \
+    rm -rf /var/lib/apt/lists/* &&  \
+    apt clean && rm /etc/nginx/sites-enabled/default
 
 COPY default-uxp.conf /etc/nginx/sites-enabled/default-uxp
-COPY --from=bilder /tmp/rest-api/etc/uxp/nginx/* /etc/nginx/conf.d/
+COPY conf.d/* /etc/nginx/conf.d/
 
-RUN rm /etc/nginx/conf.d/default-uxp.conf
-RUN rm /etc/nginx/sites-enabled/default
-
-#/etc/nginx/conf.d/
-#/etc/nginx/sites-enabled/default
+RUN mkdir  /usr/share/uxp/
+RUN mkdir  /usr/share/uxp/identity-provider-ui
+RUN mkdir  /usr/share/uxp/securityserver-ui
+COPY --from=bilder /tmp/ui/usr/share/uxp/securityserver-ui/                 /usr/share/uxp/securityserver-ui/
+COPY --from=bilder /tmp/identity-ui/usr/share/uxp/identity-provider-ui/     /usr/share/uxp/identity-provider-ui/
 
 ENTRYPOINT ["top", "-b"]
