--- a/uxp-frontend/default-uxp.conf
+++ b/uxp-frontend/default-uxp.conf
@@ -1,9 +1,11 @@
 server {
-  listen [::]:80 ;
+  listen 80 ;
 
 
   keepalive_timeout 5 5;
   client_header_buffer_size 16k;
+
+  include conf.d/uxp-versions.include;
 
   # Deny all hidden file requests
   location ~ /\. {
