--- a/uxp-frontend/Dockerfile
+++ b/uxp-frontend/Dockerfile
@@ -5,12 +5,12 @@ LABEL authors="Kirill Shypachov @kshypachov"
 COPY uxp-securityserver-ui_1.4.6_all.deb /uxp-securityserver-ui_1.4.6_all.deb
 RUN mkdir /tmp/ui
 RUN dpkg-deb -X /uxp-securityserver-ui_1.4.6_all.deb /tmp/ui
-RUN chmod 644 -R /tmp/ui
+RUN chmod 755 -R /tmp/ui
 
 COPY uxp-identity-provider-ui_1.4.6_all.deb /uxp-identity-provider-ui_1.4.6_all.deb
 RUN mkdir /tmp/identity-ui
 RUN dpkg-deb -X /uxp-identity-provider-ui_1.4.6_all.deb /tmp/identity-ui
-RUN chmod 644 -R /tmp/identity-ui
+RUN chmod 755 -R /tmp/identity-ui
 
 
 #ENTRYPOINT ["top", "-b"]
@@ -21,6 +21,12 @@ RUN apt update &&  \
     rm -rf /var/lib/apt/lists/* &&  \
     apt clean && rm /etc/nginx/sites-enabled/default
 
+COPY nginx.conf /etc/nginx/nginx.conf
+
+RUN rm -fr /var/log/nginx && \
+    mkdir -p /var/log/nginx && \
+    ln -sf /dev/null /var/log/nginx/error.log
+
 COPY default-uxp.conf /etc/nginx/sites-enabled/default-uxp
 COPY conf.d/* /etc/nginx/conf.d/
 
@@ -30,4 +36,8 @@ RUN mkdir  /usr/share/uxp/securityserver-ui
 COPY --from=bilder /tmp/ui/usr/share/uxp/securityserver-ui/                 /usr/share/uxp/securityserver-ui/
 COPY --from=bilder /tmp/identity-ui/usr/share/uxp/identity-provider-ui/     /usr/share/uxp/identity-provider-ui/
 
-ENTRYPOINT ["top", "-b"]
+#ENTRYPOINT ["top", "-b"]
+#ENTRYPOINT ["/bin/sh","nginx"] /usr/sbin/nginx
+#RUN rm /bin/sh && rm /bin/bash
+#USER nobody
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
