Add UA and EN translation for uxp-frontend

--- a/uxp-frontend/Dockerfile
+++ b/uxp-frontend/Dockerfile
@@ -12,6 +12,15 @@ RUN mkdir /tmp/identity-ui
 RUN dpkg-deb -X /uxp-identity-provider-ui_1.4.6_all.deb /tmp/identity-ui
 RUN chmod 755 -R /tmp/identity-ui
 
+COPY uxp-securityserver-locale-uk_1.4.6_all.deb /uxp-securityserver-locale-uk_1.4.6_all.deb
+RUN mkdir /tmp/uk
+RUN dpkg-deb -X /uxp-securityserver-locale-uk_1.4.6_all.deb /tmp/uk
+RUN chmod 755 -R /tmp/uk
+
+COPY uxp-securityserver-locale-en_1.4.6_all.deb /uxp-securityserver-locale-en_1.4.6_all.deb
+RUN mkdir /tmp/en
+RUN dpkg-deb -X /uxp-securityserver-locale-en_1.4.6_all.deb /tmp/en
+RUN chmod 755 -R /tmp/en
 
 #ENTRYPOINT ["top", "-b"]
 
@@ -30,14 +39,14 @@ RUN rm -fr /var/log/nginx && \
 COPY default-uxp.conf /etc/nginx/sites-enabled/default-uxp
 COPY conf.d/* /etc/nginx/conf.d/
 
-RUN mkdir  /usr/share/uxp/
-RUN mkdir  /usr/share/uxp/identity-provider-ui
-RUN mkdir  /usr/share/uxp/securityserver-ui
+RUN mkdir -p /usr/share/uxp/identity-provider-ui
+RUN mkdir -p /usr/share/uxp/securityserver-uihtml/locales/uk/
+RUN mkdir -p /usr/share/uxp/securityserver-uihtml/locales/en/
 COPY --from=bilder /tmp/ui/usr/share/uxp/securityserver-ui/                 /usr/share/uxp/securityserver-ui/
 COPY --from=bilder /tmp/identity-ui/usr/share/uxp/identity-provider-ui/     /usr/share/uxp/identity-provider-ui/
+COPY --from=bilder /tmp/en/usr/share/uxp/securityserver-ui/html/locales/en/              /usr/share/uxp/securityserver-ui/html/locales/en/
+COPY --from=bilder /tmp/uk/usr/share/uxp/securityserver-ui/html/locales/uk/               /usr/share/uxp/securityserver-ui/html/locales/uk/
 
-#ENTRYPOINT ["top", "-b"]
-#ENTRYPOINT ["/bin/sh","nginx"] /usr/sbin/nginx
-#RUN rm /bin/sh && rm /bin/bash
-#USER nobody
+RUN rm /bin/sh && rm /bin/bash
+
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
