UXP conf client done. Go to uxp monitor agent and new branch

--- a/uxp-configuration-client/Dockerfile
+++ b/uxp-configuration-client/Dockerfile
@@ -1,60 +1,56 @@
-FROM ubuntu:22.04
+FROM ubuntu:24.04 as builder
 ENV DEBIAN_FRONTEND=noninteractive
-
-LABEL authors="Kirill Shypachov @kshypachov"
-
-ARG REPO_KEY=http://192.168.99.247/key.gpg
-ARG REPO_URI="http://192.168.99.247/ testing-1.22.7 trembita2-1-22-7"
-
-RUN echo "uxp-proxy uxp-common/username string uxpadmin" | debconf-set-selections
-#RUN echo "uxp-identity-provider-rest-api  uxp-identity-provider/password  password uxpadminp" | debconf-set-selections
-#RUN useradd -m uxpadmin -s /usr/sbin/nologin -p '$6$7rx.CcTn$lkhsqW3zu6BrKbnQbOMaIFsZWv.DgH5LxtsXuxDftj8yF2e/KgxTOUQFozkYfcf1H.HSyxEtECMF8P7vy4M1b/'
 
 RUN groupadd -g 104 uxp && \
     useradd -m -u 102 -g 104 -d /var/lib/uxp -s /usr/sbin/nologin -p '$6$7rx.CcTn$lkhsqW3zu6BrKbnQbOMaIFsZWv.DgH5LxtsXuxDftj8yF2e/KgxTOUQFozkYfcf1H.HSyxEtECMF8P7vy4M1b/' uxp
 
-#RUN apt-get update  \
-#    && apt-get install -y equivs  \
-#    && equivs-control fake-systemd \
-#    && sed -i 's/^Package:.*/Package: systemd/' fake-systemd \
-#    && echo 'Version: 255.0\nArchitecture: all\nDescription: dummy systemd for containers' >> fake-systemd \
-#    && equivs-build fake-systemd \
-#    && dpkg -i systemd_255.0_all.deb
-
-#RUN apt-get update
-#RUN apt-get install -y nano
-
-RUN apt-get -qq update && apt-get -qq --no-install-recommends -y install \
-      locales ca-certificates perl bzip2 libc6-dev lsb-release gnupg2 \
-      ca-certificates gnupg supervisor net-tools iproute2 locales \
-      rlwrap ca-certificates-java debconf-utils \
-      crudini adduser expect curl rsyslog dpkg-dev \
-      python3-requests \
-    && echo "LC_ALL=en_US.UTF-8" >>/etc/environment \
-    && locale-gen en_US.UTF-8 \
-    && apt-get clean  \
-    && rm -rf /var/lib/apt/lists/*
-
-#ADD ["$REPO_KEY","/tmp/repokey.gpg"]
-#RUN apt-key add '/tmp/repokey.gpg'
-
-RUN sed -i 's/^[A-Za-z0-9]/#&/' /etc/apt/sources.list #\
-#    && rm -rf /etc/apt/sources.list.d/* \
-#    && echo "deb http://192.168.99.247/ testing-1.22.7 trembita2-1-22-7" | tee -a /etc/apt/sources.list
-
-RUN printf  '#!/bin/sh\nexit 101\n' > /usr/sbin/policy-rc.d && chmod +x /usr/sbin/policy-rc.d \
-    && printf  '#!/bin/sh\nexit 0\n' > /usr/sbin/service && chmod +x /usr/sbin/service \
-    && printf '#!/bin/sh\nexit 0\n' > /bin/systemctl && chmod +x /bin/systemctl
-
-#RUN apt update
-#RUN apt install -y uxp-confclient
 RUN mkdir "/deb"
-COPY ./deb/*.deb /deb/
+COPY ./deb/ /deb/
 
-RUN apt install /deb/*.deb
+RUN dpkg-deb -X /deb/uxp-confclient_1.22.7_amd64.deb           /tmp/conf
+RUN dpkg-deb -X /deb/uxp-addon-trembita-crypto_1.22.7_all.deb  /tmp/crypto
 
-COPY confclient-logback.xml /etc/uxp/conf.d/confclient-logback.xml
 
-#ENTRYPOINT ["top", "-b"]
+FROM eclipse-temurin:17-jdk-jammy
+
+LABEL authors="Kirill Shypachov (@kshypachov), on behalf of eGA Kyiv"
+LABEL org.opencontainers.image.authors="Kirill Shypachov <kiril.shypachov@ega.ee> (eGA Kyiv)"
+LABEL org.opencontainers.image.vendor="eGA Kyiv"
+LABEL org.opencontainers.image.title="trembita configuration client"
+LABEL org.opencontainers.image.url="URI documentation"
+LABEL org.opencontainers.image.source=""
+LABEL org.opencontainers.image.version=""
+
+
+RUN groupadd -g 104 uxp && \
+    useradd -m -u 102 -g 104 -d /var/lib/uxp -s /usr/sbin/nologin -p '' uxp
+
+RUN mkdir -p /app/jlib/addon/proxy/ciplus-jce/
+RUN mkdir -p /deb/
+
+COPY --from=builder /tmp/conf/usr/share/uxp/jlib/configuration-client.jar                     /app
+COPY --from=builder /tmp/crypto/usr/share/uxp/jlib/addon/proxy/ciplus-jce/                    /app/jlib/addon/proxy/ciplus-jce/
+COPY --from=builder /tmp/crypto/usr/share/uxp/jlib/addon/proxy/cipher-jce-provider-1.22.7.jar /app/jlib/addon/proxy/
+COPY confclient-logback.xml /app/
+COPY deb/libgomp1_12.3.0-1ubuntu1~22.04_amd64.deb /deb/
+
+RUN apt install /deb/libgomp1_12.3.0-1ubuntu1~22.04_amd64.deb && rm -rf /deb
+
+RUN rm /bin/bash && rm /bin/sh
+
 USER uxp
-ENTRYPOINT ["/usr/share/uxp/bin/confclient.sh"]
+#ENTRYPOINT ["java", \
+#            "-Xmx50m", \
+#            "-XX:MaxMetaspaceSize=70m", \
+#            "-XX:+UseG1GC", \
+#            "-Xshare:on", \
+#            "-Dfile.encoding=UTF-8", \
+#            "-Djava.library.path=/app/lib", \
+#            "-Dlogback.configurationFile=/app/confclient-logback.xml", \
+#            "-Dorg.bytedeco.javacpp.noPointerGC=true", \
+#            "-Dorg.bytedeco.javacpp.maxBytes=0", \
+#            "-Duxp.configuration-client.port=5564", \
+#            "-Duxp.common.temp-files-path=/etc/uxp/tmp/", \
+#            "-Dorg.bytedeco.javacpp.maxPhysicalBytes=0", \
+#            "-cp", "/app/configuration-client.jar:/app/jlib/addon/proxy/cipher-jce-provider-1.22.7.jar:/app/jlib/addon/proxy/ciplus-jce/*", \
+#            "ee.cyber.uxp.common.conf.globalconf.ConfigurationClientMain"]
