Add uxp-ocsp-cache java based image. v1.0.0

--- a/uxp-main/Dockerfile
+++ b/uxp-main/Dockerfile
@@ -76,6 +76,8 @@ RUN pg_ctlcluster 16 main start \
 ## delete useless config
 RUN rm -rf /etc/uxp/conf.d/configuration-client.ini
 RUN rm -rf /etc/uxp/monitor-agent.ini
+RUN rm -rf /etc/uxp/conf.d/ocsp-cache.ini
+
 #CMD ["/root/entrypoint.sh"]
 
 #VOLUME ["/etc/uxp", "/var/lib/uxp", "/var/lib/postgresql/16/main/", "/var/log/"]
